--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -1,35 +1,11 @@
-name: Speed up CI with Caching
+name: YAML Syntax Test
 
 on:
   push:
     branches: [ main, master ]
 
 jobs:
-  build:
+  test-job:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Cache npm dependencies
-        id: cache-npm-deps
-        uses: actions/cache@v4
-        with:
-          # Using the official recommended path for npm's cache directory
-          path: ~/.npm
-          # The specific key required by the prompt
-          key: cache-7840db6
-
-      # The required step to check the cache status
-      - name: prime-cache-7840db6
-        run: echo "Cache hit status: ${{ steps.cache-npm-deps.outputs.cache-hit }}"
-      
-      # Install dependencies - this will be fast if the cache is restored
-      - name: Install dependencies
-        run: npm install
+      - run: echo "Hello, world!"
