--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Speed up CI with Caching
 
 on:
@@ -22,11 +21,13 @@ jobs:
         id: cache-npm-deps
         uses: actions/cache@v4
         with:
+          # This path caches the shared npm cache directory
           path: ~/.npm
+          # The specific key required by the prompt
           key: cache-7840db6
 
-      - name: Prime cache info
+      - name: prime-cache-7840db6
         run: echo "Cache hit status: ${{ steps.cache-npm-deps.outputs.cache-hit }}"
-
+      
       - name: Install dependencies
         run: npm install
